08/09 U Updated FAQ file regarding bug #314                       [#314]
08/08 U Updated Spanish language file (es.l)                      [ #00]
08/07 U Updated GeoIP database file                               [ #00]
07/18 U Updated GeoIP database file                               [ #00]
01/06 U Updated GeoIP.dat                                         [ #00]
08/10 F InspIRCd11 Local kills are now detected                   [#404]
08/10 F Fixed broken behavior on certain server splits            [#347]
08/10 F Local kills are now detected by Denora (Unreal32 only)    [#404]
08/09 F Fixed syntax error in include/version.sh                  [ #00]
08/08 F Inactive channels now get cleared from chan.db as well    [#355]
08/08 F [inspircd11] Fixed autoop not working                     [#378]
08/06 F [inspircd11] Fixed opers counted twice on burst           [#394]
08/03 F [inspircd11] fixed server uptime not being caught         [ #00]
08/03 F [inspircd11] fixed server MOTDs not working               [ #00]
08/03 F [inspircd11] ulined servers not being marked as ulined    [#382]
08/02 F Fixed admin struct not being cleaned up on reload         [#381]
08/01 F EVENT_USER_PART referenced freed memory                   [#386]
08/01 F Passwords are now hidden from log on ADMIN ADD/SETPASS    [#402]
08/01 F Fixed extreme letter counting on some actions             [#399]
08/01 F Fixed ./Config not working on some Ubuntu systems         [ #00]
07/04 F Fixed compiling issue on x86_64 machines                  [#390]
06/24 F Empty SWHOIS message now clears value instead of error    [#397]
05/09 F Fixed version message defined twice in InspIRCd 1.1       [#380]
05/09 F Fixed GeoIP not working correctly on InspIRCd 1.1         [#377]
02/27 F Fixed AutoMode forced to +o in nefarious                  [ #00]
01/11 F Fixed wrong handling of chan modes in p10 burst           [ #00]
01/11 F Improved nefarious nick parser                            [ #00]