@@ -699,7 +699,7 @@ int denora_event_squit(char *source, int ac, char **av)
     if (denora->protocoldebug) {
         protocol_debug(source, ac, av);
     }
-    if (ac != 2)
+    if (ac < 2)
         return MOD_CONT;
     do_squit(av[0]);
     return MOD_CONT;
