@@ -9,9 +9,13 @@ VERSION_MAJOR="1"
 VERSION_MINOR="3"
 VERSION_PATCH="0"
 VERSION_EXTRA="SVN"
-VERSION_BUILD="56"
+VERSION_BUILD="57"
 
 # $Log$
+#
+# BUILD : 1.3.0.57 (SVN)
+# BUGS  : 395
+# NOTES : Fixed SQUIT not handled properly on P10 IRCds
 #
 # BUILD : 1.3.0.56 (SVN)
 # BUGS  : N/A
